--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Blog\\": "src"
+      "": "src"
     },
     "files" : [
       "app/bootstrap.php",
@@ -21,7 +21,8 @@
   "require": {
     "silex/silex": "^2.1",
     "symfony/config": "^3.3",
-    "symfony/yaml": "^3.3"
+    "symfony/yaml": "^3.3",
+    "simple-bus/message-bus": "^2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2"
