--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
       "app/services.php"
     ]
   },
+  "autoload-dev": {
+    "psr-4": {
+      "": "tests"
+    }
+  },
   "require": {
     "silex/silex": "^2.1",
     "symfony/config": "^3.3",
@@ -25,6 +30,7 @@
     "simple-bus/message-bus": "^2.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.2"
+    "phpunit/phpunit": "^6.2",
+    "guzzlehttp/guzzle": "^6.3"
   }
 }
