--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,9 @@ sonar.sources=src
 sonar.language=php
 
 sonar.sourceEncoding=UTF-8
+
+sonar.issue.ignore.multicriteria=e1
+
+# String literals should not be duplicated
+sonar.issue.ignore.multicriteria.e1.ruleKey=php:S1192
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.php
