--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,6 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
-    "guzzlehttp/guzzle": "^6.3"
+    "symfony/browser-kit": "^3.3"
   }
 }
