--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,10 @@
-sonar.projectKey=simple_silex_blog
-sonar.projectName=Simple Silex Blog
+sonar.projectKey=wolflingorg-simple-silex-blog-backend
+sonar.projectName=Simple Silex Blog Backend
 sonar.projectVersion=1.0
-
-sonar.sources=src
-sonar.language=php
 
 sonar.sourceEncoding=UTF-8
 
-sonar.issue.ignore.multicriteria=e1
+sonar.language=php
 
-# String literals should not be duplicated
-sonar.issue.ignore.multicriteria.e1.ruleKey=php:S1192
-sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.php
+sonar.sources=src
+sonar.tests=tests
