--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,5 +6,10 @@ sonar.sourceEncoding=UTF-8
 
 sonar.language=php
 
+# Sources
 sonar.sources=src
 sonar.tests=tests
+
+# Reports
+sonar.php.coverage.reportPath=reports/phpunit.coverage.xml
+sonar.php.tests.reportPath=reports/phpunit.xml
