--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 
 script:
   - sonar-scanner
-  - phpunit
+  - phpunit --configuration phpunit.xml.dist --coverage-text
 
 cache:
   directories:
