--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ before_script:
 script:
   - sonar-scanner
   - phpunit --configuration phpunit.xml.dist --coverage-text
+  - |
+      cat > $HOME/app/config/parameters.yml << EOF
+      parameters:
+      EOF
 
 cache:
   directories:
