--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,27 @@
     "silex/silex": "^2.1",
     "symfony/config": "^3.3",
     "symfony/yaml": "^3.3",
-    "simple-bus/message-bus": "^2.2"
+    "simple-bus/message-bus": "^2.2",
+    "incenteev/composer-parameter-handler": "^2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
     "symfony/browser-kit": "^3.3"
+  },
+  "scripts": {
+    "bootstrap-scripts": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+    ],
+    "post-install-cmd": [
+      "@bootstrap-scripts"
+    ],
+    "post-update-cmd": [
+      "@bootstrap-scripts"
+    ]
+  },
+  "extra": {
+    "incenteev-parameters": {
+      "file": "app/config/parameters.yml"
+    }
   }
 }
