--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,6 +9,8 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^ index.php [QSA,L]
 
+    SetEnv APP_ENV DEV
+
     php_value upload_max_filesize 100M
     php_value post_max_size 100M
 </IfModule>
