--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
     "symfony/yaml": "^3.3",
     "simple-bus/message-bus": "^2.2",
     "incenteev/composer-parameter-handler": "^2.1",
-    "symfony/console": "^3.3"
+    "symfony/console": "^3.3",
+    "doctrine/dbal": "^2.5",
+    "doctrine/migrations": "^1.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
