--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,2 +1,17 @@
 imports:
     - { resource: parameters.yml }
+
+doctrine:
+    dbal:
+        driver:   pdo_mysql
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
+        charset:  UTF8
+    migrations:
+        directory: "%kernel.root_dir%/DoctrineMigrations"
+        namespace: "DoctrineMigrations"
+        name: "silex_blog"
+        table_name: "_migrations"
