--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,4 +3,4 @@ parameters:
     database_port:     ~
     database_name:     silex_blog
     database_user:     root
-    database_password: root
+    database_password: ~
