--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,14 @@ root = true
 ; Unix-style newlines
 [*]
 end_of_line = LF
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.php]
 indent_style = space
 indent_size = 4
+charset = utf-8
+
+[{*.yml}]
+indent_style = space
+indent_size = 2
