--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "incenteev/composer-parameter-handler": "^2.1",
     "symfony/console": "^3.3",
     "doctrine/dbal": "^2.5",
-    "doctrine/migrations": "^1.5"
+    "doctrine/migrations": "^1.5",
+    "symfony/validator": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
