--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "files": [
       "app/bootstrap.php",
       "app/services.php",
-      "app/middlewares.php"
+      "app/middlewares.php",
+      "app/exceptions.php"
     ]
   },
   "autoload-dev": {
