--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,15 @@ language: php
 php:
   - '7.1'
 
+services:
+  - mysql
+
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
+  - php app/console dbal:run-sql "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
+  - php app/config migrations:migrate
+  - php app/config fixtures:load
 
 script:
   - phpunit --configuration phpunit.xml.dist
