--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
-  - php app/console dbal:run-sql "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
+  - mysql -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
   - php app/config migrations:migrate
   - php app/config fixtures:load
 
