--- a/tests/Mocks/Configuration/valid-parameters.yml
+++ b/tests/Mocks/Configuration/valid-parameters.yml
@@ -1,6 +1,6 @@
 parameters:
     database_host: 127.0.0.1
-    database_port: 3306
+    database_port: ~
     database_name: symfony
     database_user: root
-    database_password: root
+    database_password: ~
