--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "symfony/console": "^3.3",
     "doctrine/dbal": "^2.5",
     "doctrine/migrations": "^1.5",
-    "symfony/validator": "^3.3"
+    "symfony/validator": "^3.3",
+    "symfony/finder": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
