--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "doctrine/dbal": "^2.5",
     "doctrine/migrations": "^1.5",
     "symfony/validator": "^3.3",
-    "symfony/finder": "^3.3"
+    "symfony/finder": "^3.3",
+    "jms/serializer": "^1.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
