--- a/app/config/routing/api.v1.photos.yml
+++ b/app/config/routing/api.v1.photos.yml
@@ -11,25 +11,19 @@ photos.search:
   methods: [GET]
 
 photos.photo:
-  path: /{id}/
-  requirements:
-    id: '\d+'
+  path: /{uuid}/
   defaults:
     _controller: 'Blog\Controller\PhotosController::showAction'
   methods: [GET]
 
 photos.photo:
-  path: /{id}/
-  requirements:
-    id: '\d+'
+  path: /{uuid}/
   defaults:
     _controller: 'Blog\Controller\PhotosController::editAction'
   methods: [PUT]
 
 photos.photo:
-  path: /{id}/
-  requirements:
-    id: '\d+'
+  path: /{uuid}/
   defaults:
     _controller: 'Blog\Controller\PhotosController::deleteAction'
   methods: [DELETE]
