--- a/app/config/routing/api.v1.posts.yml
+++ b/app/config/routing/api.v1.posts.yml
@@ -11,25 +11,19 @@ posts.search:
   methods: [GET]
 
 posts.post:
-  path: /{id}/
-  requirements:
-    id: '\d+'
+  path: /{uuid}/
   defaults:
     _controller: 'Blog\Controller\PostsController::showAction'
   methods: [GET]
 
 posts.post:
-  path: /{id}/
-  requirements:
-    id: '\d+'
+  path: /{uuid}/
   defaults:
     _controller: 'Blog\Controller\PostsController::editAction'
   methods: [PUT]
 
 posts.post:
-  path: /{id}/
-  requirements:
-    id: '\d+'
+  path: /{uuid}/
   defaults:
     _controller: 'Blog\Controller\PostsController::deleteAction'
   methods: [DELETE]
