--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "doctrine/migrations": "^1.5",
     "symfony/validator": "^3.3",
     "symfony/finder": "^3.3",
-    "jms/serializer": "^1.7"
+    "jms/serializer": "^1.7",
+    "symfony/property-access": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
