--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "symfony/validator": "^3.3",
     "symfony/finder": "^3.3",
     "jms/serializer": "^1.7",
-    "symfony/property-access": "^3.3"
+    "symfony/property-access": "^3.3",
+    "dflydev/doctrine-orm-service-provider": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
