--- a/app/mappings/Blog.Entity.Post.dcm.yml
+++ b/app/mappings/Blog.Entity.Post.dcm.yml
@@ -1,6 +1,6 @@
 Blog\Entity\Post:
     type: entity
-    table: user
+    table: post
     repositoryClass: Blog\Repository\Doctrine\PostRepository
     id:
         id:
