--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,6 +1,8 @@
 parameters:
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     silex_blog
-    database_user:     root
-    database_password: ~
+    database_host:      127.0.0.1
+    database_port:      ~
+    database_name:      silex_blog
+    database_user:      root
+    database_password:  ~
+
+    jwt_secret:         ~
