--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "symfony/finder": "^3.3",
     "jms/serializer": "^1.7",
     "symfony/property-access": "^3.3",
-    "dflydev/doctrine-orm-service-provider": "^2.0"
+    "dflydev/doctrine-orm-service-provider": "^2.0",
+    "symfony/security": "^3.3",
+    "evaneos/silex-jwt-provider": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
