--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,4 +39,8 @@ orm.em.options:
             type: yml
             namespace: "Blog\\Entity\\Post"
             path: "%kernel.root_dir%/mappings"
+        User:
+            type: yml
+            namespace: "Blog\\Entity\\User"
+            path: "%kernel.root_dir%/mappings"
 
