--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "symfony/property-access": "^3.3",
     "dflydev/doctrine-orm-service-provider": "^2.0",
     "symfony/security": "^3.3",
-    "evaneos/silex-jwt-provider": "^2.0"
+    "firebase/php-jwt": "^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
